css/styles.css
html{
    scroll-behavior: smooth;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
:root {
    --wine-red: #8b002a; 
    --light-wine-red:rgb(180, 23, 70); 
    --neon-glow: 0 0 5px var(--wine-red), 
                 0 0 15px var(--wine-red), 
                 0 0 30px var(--wine-red);
}
body {
    background-color: #080808; 
    color: #ffffff;
    overflow-x: hidden;
    text-align: center;
}

/* --- Navbar --- */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 25px 50px;
    background-color: rgba(8, 8, 8, 0.85);
    backdrop-filter: blur(10px);
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
    border-bottom: 1px solid rgba(139, 0, 42, 0.3);
}
.logo {
    font-size: 1.5rem;
    font-weight: 300;
    letter-spacing: 2px;
}

.wm-logo {
    color: transparent;
    -webkit-text-stroke: 1px var(--wine-red);
    text-shadow: var(--neon-glow);
    font-weight: bold;
}

nav ul {
    list-style: none;
    display: flex;
    gap: 30px;
}

nav a {
    color: #e0e0e0;
    text-decoration: none;
    font-size: 0.85rem;
    letter-spacing: 1.5px;
    transition: all 0.3s ease;
}

nav a:hover {
    color: #fff;
    text-shadow: 0 0 8px var(--wine-red);
}
.menu-toggle {
    display: none;
    flex-direction: column;
    gap: 5px;
    cursor: pointer;
    z-index: 200;
}

.menu-toggle span {
    width: 25px;
    height: 3px;
    background: var(--wine-red);
}

/* Mobile */
@media (max-width: 768px){

    .menu-toggle{
        display: flex;
    }

    nav{
        position: fixed;
        top: 0;
        right: -100%;
        width: 100%;
        height: 100vh;
        background: rgba(8,8,8,0.98);
        backdrop-filter: blur(10px);
        transition: 0.4s ease;
        border-bottom: 2px solid var(--wine-red);
    }

    nav.active{
        right: 0;
    }

    nav ul{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100%;
        gap: 30px;
        
    }

    nav a{
        font-size: 1.2rem;
        letter-spacing: 2px;
    }
}
/* --- Hero Section --- */
.hero {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: relative;
    padding-top: 80px; 
}

.hero-content {
    z-index: 10;
}

h1 {
    font-size: 4rem;
    margin-bottom: 15px;
    text-transform: uppercase;
    line-height: 1.1;
    text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
}
@media (max-width:900px) {
    h1{
        font-size: 3.4rem;
    }
}
h2{
    font-size: 2rem;
    margin-bottom: 20px;
    text-transform: uppercase;
    color: var(--wine-red);
}

p {
    font-size: 1rem;
    margin-bottom: 40px;
    letter-spacing: 3px;
    color: #a0a0a0;
    z-index: 2;
}

/* --- Buttons --- */
.hero-buttons {
    display: flex;
    justify-content: center;
    gap: 25px;
}

.btn {
    padding: 12px 35px;
    font-size: 0.9rem;
    cursor: pointer;
    background: transparent;
    color: #fff;
    border: 1.5px solid var(--wine-red);
    border-radius: 40px; 
    transition: all 0.3s ease;
    text-transform: uppercase;
    letter-spacing: 1.5px;
    box-shadow: 0 0 15px rgba(139, 0, 42, 0.4) inset, 0 0 15px rgba(139, 0, 42, 0.4);
    z-index: 2;
}
.btn-projects {
    margin: 0px 20px 20px 20px;
    font-size: 1.2rem;
    cursor: pointer;
    background: transparent;
    color: var(--wine-red);
    border: 0px;
    border-radius: 40px; 
    transition: all 0.3s ease;
    text-transform: uppercase;
    text-shadow: 2px 2px 5px var(--wine-red);
    animation: bounce 2s infinite;
}
.btn-projects:hover {
    color: var(--light-wine-red);
    text-shadow: var(--neon-glow);
    scale: 1.05;
}
.btn:hover {
    background-color: rgba(139, 0, 42, 0.2);
    box-shadow: var(--neon-glow);
    transform: translateY(-2px);
}

/* --- Neon Shapes --- */
.neon-shape {
    position: absolute;
    border: 2px solid var(--wine-red);
    box-shadow: var(--neon-glow);
    z-index: 1;
    opacity: 0.4;
    pointer-events: none; 
}
.shape-1 {
    width: 400px;
    height: 400px;
    transform: rotate(45deg);
    top: 15%;
    left: -5%;
}

.shape-2 {
    width: 600px;
    height: 200px;
    border-radius: 50%;
    transform: rotate(-20deg);
    bottom: -5%;
    right: -10%;
}   
.shape-3 {
    width: 300px;
    height: 300px;
    transform: rotate(30deg);
    bottom: -120%;
    right: -5%;
}
.shape-4 {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    transform: rotate(-15deg);
    bottom: -80%;
    left: -5%;
}
.shape-5 {
    width: 350px;
    height: 350px;
    transform: rotate(-60deg);
    bottom: -300%;
    left: -5%;
}
.shape-6 {
    width: 250px;
    height: 50px;
    border-radius: 50%;
    transform: rotate(-25deg);
    bottom: -250%;
    right: -5%;
}
.shape-7 {
    width: 250px;
    height: 50px;
    border-radius: 50%;
    transform: rotate(25deg);
    bottom: -240%;
    right: -5%;
}
/* ... */

